fixed dark mode in project view

--- a/styles/global.css
+++ b/styles/global.css
@@ -33,13 +33,8 @@ a {
   cursor: pointer;
 }
 a:hover {
-  transition: color 0.3s;
-    text-decoration: underline;
+    transition: color 0.3s;
     color: steelblue;
-}
-
-a:visited {
-    color: inherit;
 }
 
 
